# todo_db_schema

./: .gitignore  Dockerfile  Makefile  alembic.ini  compose.yml  pyproject.toml
.devcontainer/: .env  .env.example  devcontainer.json  setup.sh
migrations/: env.py
migrations/versions/: 20204c12b9f9_create_models.py
models/: __init__.py  base_model.py  cnf_user.py  dat_todo.py
